--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -289,7 +289,6 @@ ul.transportlist a  {
     border-top: 1px solid #000;
     padding: 0 4px;
     margin: 0 0 2px 2px ;
-    width: 65px;
 }
 span.coords {
     display: none;
@@ -330,5 +329,23 @@ span.coords {
     .holder span, .recipient span {
         min-width: 5em;
     }
-
+    .signet {
+        background-size: 30px auto;
+        background-position: 2px 15px;
+    }
+    .signetdistance {
+        width: 40px;
+    }
+    .distance2target {
+        font-size: 0.8em;
+    }
+    .transportlist li {
+        margin-bottom: 1px;
+    }
+    .contentDescription {
+        padding-top: 0;
+    }
+    #setuserstate select {
+        width: 110px;
+    }
 }
