--- a/templates/kohrsupply/location_edit.html
+++ b/templates/kohrsupply/location_edit.html
@@ -4,7 +4,7 @@
 
 <h2>location</h2>
 
-<form method="post" >
+<form id="locationedit" method="post" >
 {% csrf_token %}
     
             {{ form.as_p }}
