--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -140,16 +140,17 @@ ul.transportlist a  {
 }
 .signetdistance {
     float: left;
-    width: 85px;
+    width: 70px;
     min-height: 115px; 
     border-right: 2px solid #fff;
     margin-right: 15px;
+    padding-right: 5px;
 }
 
 .signet {
     background-repeat: no-repeat ;
     background-size: 50px auto;
-    background-position: 13px 15px;
+    background-position: 10px 10px;
     color: #000;
     color: transparent;
     padding: 53px 25px 0 0;
@@ -228,7 +229,7 @@ ul.transportlist a  {
 .transportlist li {
     margin-bottom: 5px;
     list-style-type: none;
-    padding: 1px 7px;
+    padding: 1px 5px;
 }
 .transportlist li hr {
     color: #e5e5e5;
@@ -278,8 +279,6 @@ ul.transportlist a  {
 
 .distance2target{
     border-top: 1px solid #000;
-    padding: 0 4px;
-    margin: 0 0 2px 2px ;
 }
 span.coords {
     display: none;
@@ -321,8 +320,9 @@ span.coords {
         min-width: 5em;
     }
     .signet {
-        background-size: 30px auto;
-        background-position: 2px 15px;
+        background-size: 35px auto;
+        background-position: 2px 5px;
+        padding-top: 30px;
     }
     .signetdistance {
         width: 40px;
