--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -159,28 +159,47 @@ ul.transportlist a  {
     font-size: 10px;
     margin: 0 4px 4px 0;
 }
+ul.signetlist {
+    padding-left: 0;
+    margin:0;
+}
+ul.signetlist li {
+    background-repeat: no-repeat ;
+    background-size: 30px auto;
+    padding-left: 45px;
+    list-style-type: none;
+    line-height: 35px;
+}
 
+li.content_nonfood,
 .content_nonfood .signet {
     background-image: url('//img.klml.de/devel/ptap/nonfood_icon__50.png')  ;
 }
+li.content_people,
 .content_people .signet {
     background-image: url('//img.klml.de/devel/ptap/people_icon__50.png')  ;
 }
+li.content_food,
 .content_food .signet {
     background-image: url('//img.klml.de/devel/ptap/food_icon__50.png')  ;
 }
+li.content_warmfood,
 .content_warmfood .signet {
     background-image: url('//img.klml.de/devel/ptap/warmfood_icon__50.png')  ;
 }
+li.content_chilledfood,
 .content_chilledfood .signet {
     background-image: url('//img.klml.de/devel/ptap/chilledfood_icon__50.png')  ;
 }
+li.content_deepfrozenfood,
 .content_deepfrozenfood .signet {
     background-image: url('//img.klml.de/devel/ptap/frozenfood_icon__50.png')  ;
 }
+li.content_laundry,
 .content_laundry .signet {
     background-image: url('//img.klml.de/devel/ptap/laundry_icon__50.png')  ;
 }
+li.content_garbage,
 .content_garbage .signet {
     background-image: url('//img.klml.de/devel/ptap/garbage_icon__50.png')  ;
 }
