--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -32,7 +32,7 @@
 
         {% else %}
             <a href="/about" class="about" title="kohr.supply is a p2p and relaying logistic platform" >p2p & relaying logistics</a>
-            <p class="right">Please <a href="{% url 'kohrsupply:login' %}" accesskey="l" >login</a> or <a href="{% url 'signup' %}">signup</a>.</p>
+            <p class="right">Please <a href="{% url 'login' %}" accesskey="l" >login</a> or <a href="{% url 'signup' %}">signup</a>.</p>
         {% endif %}
         </div>
         <br class="cb" />
@@ -68,7 +68,7 @@
         {% if user.is_authenticated %}
             <a href="{% url 'logout' %}" accesskey="l" >logout</a>
         {% else %}
-            Please <a href="{% url 'kohrsupply:login' %}">login</a> or <a href="{% url 'signup' %}">signup</a>.
+            Please <a href="{% url 'login' %}">login</a> or <a href="{% url 'signup' %}">signup</a>.
         {% endif %}
         </p>
     {% endblock %}
