push to python3

--- a/templates/registration/done.html
+++ b/templates/registration/done.html
@@ -6,6 +6,6 @@
 
 You were registrated.
 
-Please <a href="{% url 'kohrsupply:login' %}">login</a> 
+Please <a href="{% url 'login' %}">login</a>
 
 {% endblock %}
