settings in context processor

--- a/templates/kohrsupply/transports.html
+++ b/templates/kohrsupply/transports.html
@@ -11,5 +11,8 @@
 <a href="#" class="getlocal">get local</a>
 <a href="/?lat=48.13704&lon=11.57599&wide=10&zoomout=1" id="">munich</a>
 
+{% if setting.KOHR_MAP %}
  <div id="mapid"></div>
+{% endif %}
+
 {% endblock %}
