--- a/templates/kohrsupply/transport.html
+++ b/templates/kohrsupply/transport.html
@@ -45,7 +45,7 @@
     </div>
 
     <span class="size" title="Größe">{{ transport.contentSize }}</span>
-    <span class="weight" title="Gewicht">{{ transport.contentWeight }}</span>
+    <span class="weight" title="Gewicht">{{ transport.contentWeight }} kg</span>
 
 
 
