--- a/templates/kohrsupply/transports_list.html
+++ b/templates/kohrsupply/transports_list.html
@@ -42,7 +42,7 @@
     </div>
 
     <span class="size" title="Größe">{{ transport.contentSize }}</span>
-    <span class="weight" title="Gewicht">{{ transport.contentWeight }}</span>
+    <span class="weight" title="Gewicht">{{ transport.contentWeight }} kg</span>
 
         </a>
      </li>
