--- a/templates/kohrsupply/transport.html
+++ b/templates/kohrsupply/transport.html
@@ -32,7 +32,7 @@
             <em class="carrier" title="recipient is {{ transport.recipient }}, is currently {{ transport.recipientgetfet }} and has got {{ transport.recipientPoints.summa  }} points"><small>{{ transport.recipientgetfet }}</small><a href="/carrier/{{ transport.recipient.id }}/">{{ transport.recipient }} ({{ transport.recipientPoints.summa }})</a></em>
             <span class="coords ">{{ transport.recipientLocation.geoLat | unlocalize }}, {{ transport.recipientLocation.geoLon | unlocalize }}</span>
         </h2>
-        {{ transport.contentDescription }}
+        <p>{{ transport.contentDescription }}</p>
         <span class="size" title="Größe">{{ transport.contentSize }}</span>
         <span class="weight" title="Gewicht">{{ transport.contentWeight }} kg</span>
     </div>
