--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -332,6 +332,9 @@ span.coords {
 
 
 @media only screen and (max-width: 959px) {
+    body{
+        padding:0 1px;
+    }
     #logo img {
         width: 85px;
     }
