user and points nbsp

--- a/templates/kohrsupply/transport.html
+++ b/templates/kohrsupply/transport.html
@@ -20,7 +20,7 @@
         <h2 class="holder carriergetfet_{{ transport.getfet }}" title="This transport is at">
         {% load l10n %}
             <span><a href="/location/{{ transport.currentLocation.id }}/">{{ transport.currentLocation.locationname }}</a></span>
-            <em class="carrier" title="carrier is {{ transport.currentHolder }}, is currently {{ transport.getfet }} and has got {{ transport.currentHolderPoints.summa  }} points" ><a href="/carrier/{{ transport.currentHolder.id }}/">{{ transport.currentHolder }} ({{ transport.currentHolderPoints.summa }})</a>
+            <em class="carrier" title="carrier is {{ transport.currentHolder }}, is currently {{ transport.getfet }} and has got {{ transport.currentHolderPoints.summa  }} points" ><a href="/carrier/{{ transport.currentHolder.id }}/">{{ transport.currentHolder }}&nbsp;({{ transport.currentHolderPoints.summa }})</a>
             {% if transport.currentHolder.id == user.id %}
                 <span class="yours" title="You have this transport">★</span>
             {% endif %}
@@ -29,7 +29,7 @@
         </h2>
         <h2 class="recipient carriergetfet_{{ transport.recipientgetfet }}" title="This transport should get to">
             <span><a href="/location/{{ transport.recipientLocation.id }}/">{{ transport.recipientLocation.locationname }}</a></span>
-            <em class="carrier" title="recipient is {{ transport.recipient }}, is currently {{ transport.recipientgetfet }} and has got {{ transport.recipientPoints.summa  }} points"><small>{{ transport.recipientgetfet }}</small><a href="/carrier/{{ transport.recipient.id }}/">{{ transport.recipient }} ({{ transport.recipientPoints.summa }})</a></em>
+            <em class="carrier" title="recipient is {{ transport.recipient }}, is currently {{ transport.recipientgetfet }} and has got {{ transport.recipientPoints.summa  }} points"><small>{{ transport.recipientgetfet }}</small><a href="/carrier/{{ transport.recipient.id }}/">{{ transport.recipient }}&nbsp;({{ transport.recipientPoints.summa }})</a></em>
             <span class="coords ">{{ transport.recipientLocation.geoLat | unlocalize }}, {{ transport.recipientLocation.geoLon | unlocalize }}</span>
         </h2>
         <p>{{ transport.contentDescription }}</p>
