--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -126,6 +126,7 @@ form#userstate input {
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAQAAABeK7cBAAAADUlEQVR42mP8/5+BAQAHAwIAILjcJwAAAABJRU5ErkJggg==) ;
     background-position: 80px 0px;
     margin-bottom: 2px;
+    min-height: 145px;
     }
 .transport h1 span {
     font-size: 10px;
