--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -125,16 +125,16 @@ form#userstate input {
     background-repeat: repeat-y ;
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAQAAABeK7cBAAAADUlEQVR42mP8/5+BAQAHAwIAILjcJwAAAABJRU5ErkJggg==) ;
     background-position: 80px 0px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
     min-height: 145px;
     }
 .transport h1 span {
     font-size: 10px;
 }
-
-#mapid { height: 580px; }
-
-
+#mapid {
+    height: 580px;
+    margin-top: 5px ;
+    }
 ul.transportlist a.thislink  {
     display: none;
 }
