--- a/templates/kohrsupply/transports_list.html
+++ b/templates/kohrsupply/transports_list.html
@@ -13,6 +13,8 @@
                     </div>
                     <div class="distance2target" title="aktueller Abstand zum Ziel">
                     {{ transport.distance2target }} km
+                    <br />
+                    {{ transport.cardinaldirection2target }}°
                     </div>
                 </div>
                 <h2 class="holder carriergetfet_{{ transport.getfet }}" title="This transport is at">
