--- a/templates/kohrsupply/transports_list.html
+++ b/templates/kohrsupply/transports_list.html
@@ -12,9 +12,13 @@
                     {% endif %}
                     </div>
                     <div class="distance2target" title="aktueller Abstand zum Ziel">
+                    {% if transport.distance2target != 0 %}
                     {{ transport.distance2target }} km
                     <br />
                     {{ transport.cardinaldirection2target }}°
+                    {% else %}
+                        vor ort
+                    {% endif %}
                     </div>
                 </div>
                 <h2 class="holder carriergetfet_{{ transport.getfet }}" title="This transport is at">
