--- a/static/kohrsupply.css
+++ b/static/kohrsupply.css
@@ -127,7 +127,10 @@ form#userstate input {
     background-position: 80px 0px;
     margin-bottom: 5px;
     min-height: 145px;
-    }
+}
+#transportedit .transport {
+    background-position: 145px 0px;
+}
 .transport h1 span {
     font-size: 10px;
 }
