--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,3 +1,4 @@
+{% extends "kohrsupply/base.html" %}
 
 {% if user.is_authenticated %}
 <p>Your account doesn't have access to this page. To proceed,
