--- a/templates/kohrsupply/base.html
+++ b/templates/kohrsupply/base.html
@@ -2,7 +2,7 @@
 <head>
     <title>kohr.supply</title>
     <meta name="viewport" content="width=device-width, user-scalable=0"/>
-    <link rel="stylesheet" href="//cdn.rawgit.com/klml/usefulclassroomphrases/v1.1/ucp.css" >
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/klml/usefulclassroomphrases@master/ucp.css">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jqueryui@1.11.1/jquery-ui.min.css" integrity="sha256-orjEV2zLazjvpIqT0mVRAYVbewIvSmbv6s+l8tW9Xxg=" crossorigin="anonymous">
